--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -11,7 +11,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout master
-        uses: action/checkout@v3
+        uses: actions/checkout@v3
         with:
           distribution: "corretto"
           java-version: 17
