--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -4,7 +4,6 @@ on:
   push:
     branches:
       - master
-
 jobs:
   build-deploy:
     name: Build an Deploy Spring Boot app example
@@ -12,9 +11,12 @@ jobs:
     steps:
       - name: Checkout master
         uses: actions/checkout@v3
+
+      - name: Setup JDK 17
+        uses: actions/setup-java@v3
         with:
-          distribution: "corretto"
-          java-version: 17
+          distribution: 'corretto'
+          java-version: '17'
 
       - name: Unit tests
         run: mvn -B test --file pom.xml
