--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -9,19 +9,16 @@ jobs:
     name: Build an Deploy Spring Boot app example
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout master
-        uses: actions/checkout@v3
-
+      - uses: actions/checkout@v3
       - name: Setup JDK 17
         uses: actions/setup-java@v3
         with:
-          distribution: 'corretto'
           java-version: '17'
+          distribution: 'corretto'
 
       - name: Unit tests
         run: mvn -B test --file pom.xml
 
-      - name: Build the application
+      - name: Build with Maven
         run:
-          mvn clean
-          mvn -B package --file pom.xml
+          mvn --batch-mode --update-snapshots package
