--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -21,4 +21,5 @@ jobs:
 
       - name: Build with Maven
         run:
-          mvn --batch-mode --update-snapshots package
+          clean install
+          mvn -B package --file pom.xml
