--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -21,5 +21,5 @@ jobs:
 
       - name: Build with Maven
         run:
-          clean install
+          mvn clean install
           mvn -B package --file pom.xml
