--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -20,6 +20,6 @@ jobs:
         run: mvn -B test --file pom.xml
 
       - name: Build with Maven
-        run:
+        run: |
           mvn clean install
           mvn -B package --file pom.xml
